--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-vite": "^0.2.2",
+    "@storybook/builder-vite": "^0.1.37",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.10",
     "@vitejs/plugin-vue": "^3.0.1",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.8.0",
     "vite": "^3.0.4",
     "vue-loader": "^16.8.3"
   }
